--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="./script.js" defer></script>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div>
-      <div class="display">
-        <input type="text" />
-      </div>
+    <div class="container">
+      <div class="display">0</div>
       <div class="calculator">
         <div class="operators">
           <button>=</button>
@@ -21,16 +20,16 @@
           <button id="clear">Clear</button>
         </div>
         <div class="digits">
-            <button>0</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
+          <button>0</button>
+          <button>1</button>
+          <button>2</button>
+          <button>3</button>
+          <button>4</button>
+          <button>5</button>
+          <button>6</button>
+          <button>7</button>
+          <button>8</button>
+          <button>9</button>
         </div>
       </div>
     </div>
