Functioning calculator without keyboard support

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
           <button>-</button>
           <button>*</button>
           <button>/</button>
-          <button id="clear">Clear</button>
+          <button>Clear</button>
+          <button>Back</button>
         </div>
         <div class="digits">
           <button>0</button>
@@ -30,6 +31,7 @@
           <button>7</button>
           <button>8</button>
           <button>9</button>
+          <button>.</button>
         </div>
       </div>
     </div>
